# Z_Wave_Console

./: Directory.Build.props  Merten 506004.docx  README.md  Z_Wave_Console.slnx  vcpkg.json
.github/: copilot-instructions.md
Z_Wave_Console/: APICommands.cpp  APICommands.h  APIFrame.h  CCDispatcher.cpp  CCDispatcher.h  CommandClass.h  DebugMutex.h  Device.cpp  Device.h  HostInfo.cpp  InitializeManager.cpp  InitializeManager.h  Interface.cpp  Interface.h  InterviewManager.cpp  InterviewManager.h  JSONConversions.h  JsonUtils.cpp  JsonUtils.h  Logging.h  Module.cpp  Module.h  Node.cpp  Node.h  NodeId.h  Nodes.cpp  Nodes.h  Notify.h  SerialPort.cpp  SerialPort.h  TcpServer.cpp  TcpServer.h  Z_Wave.cpp  Z_Wave.h  Z_Wave_Console.cpp  Z_Wave_Console.vcxproj  Z_Wave_Console.vcxproj.filters  Z_Wave_TCP.cpp  zwave_log.txt
Z_Wave_Stack_PI/: APIFrame.h  CMakeLists.txt  CMakePresets.json
Z_Wave_Stack_PI/.github/: copilot-instructions.md
Z_Wave_Stack_PI/Z_Wave_Stack_PI/: APICommands.cpp  APICommands.h  APIDispatcher.cpp  APIDispatcher.h  APIFrame.h  CMakeLists.txt  CommandClass.h  Controller.cpp  Controller.h  ControllerInfo.cpp  ControllerInfo.h  ControllerInfoFormatter.cpp  DebugMutex.h  FormatCompat.h  FormatCompat.inl  Initialize.cpp  Initialize.h  Interface.cpp  Interface.h  Logging.cpp  Logging.h  Node.cpp  Node.h  NodeCommandClasses.cpp  NodeCommandClasses.h  NodeId.h  NodeId_t.h  NodeInfo.cpp  NodeInfo.h  NodeInfoFormatter.cpp  NodeInterview.cpp  NodeInterview.h  Nodes.cpp  Nodes.h  Notify.h  SerialPort.cpp  SerialPort.h  Strong_id.h  ZWaveAPI.cpp  ZWaveAPI.h  (+4 more)
Z_Wave_UI/: App.xaml  App.xaml.cs  Dictionary1.xaml  FileName.cs  LoggingTab.xaml  LoggingTab.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ModuleInfoTab.xaml  ModuleInfoTab.xaml.cs  NodesTab.xaml  NodesTab.xaml.cs  Z_Wave_UI.csproj
Z_Wave_UI/Commands/: AsyncRelayCommand.cs  RelayCommand.cs
Z_Wave_UI/Helpers/: DataGridAutoScrollBehavior.cs
Z_Wave_UI/Models/: LogEntryModel.cs
Z_Wave_UI/Services/: ConnectionSettingsStore.cs  ZWaveTcpClientService.cs
Z_Wave_UI/ViewModels/: ConnectionViewModel.cs  LoggingViewModel.cs  MainViewModel.cs  ModuleInfoViewModel.cs  NodeInfoViewModel.cs  NodeListViewModel.cs  ViewModelBase.cs
